--- a/ai-chatbots.html
+++ b/ai-chatbots.html
@@ -1,92 +1,62 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top AI Chatbots</title>
-    <style>
-        body {
-            background-color: #0d0b1d;
-            color: #ffffff;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 40px;
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #00fff7;
-            text-shadow: 0 0 10px #00fff7;
-        }
-        .tool-card {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid #2a2a3d;
-            border-radius: 15px;
-            padding: 20px;
-            margin: 20px 0;
-            transition: 0.3s ease-in-out;
-        }
-        .tool-card:hover {
-            background-color: rgba(0, 255, 247, 0.05);
-            box-shadow: 0 0 12px #00fff7;
-        }
-        .tool-name {
-            font-size: 1.4em;
-            color: #ffffff;
-            font-weight: bold;
-        }
-        .tool-desc {
-            margin-top: 10px;
-            color: #bbbbbb;
-        }
-        .visit-btn {
-            margin-top: 10px;
-            display: inline-block;
-            background-color: #00fff7;
-            color: #000;
-            padding: 8px 16px;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: 0.3s ease-in-out;
-        }
-        .visit-btn:hover {
-            background-color: #00e5d1;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top AI Chatbots</title>
+  <style>
+    body {
+      background-color: #0d0b1d;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 40px;
+    }
+    h1 {
+      color: #00fff7;
+      font-size: 2.5em;
+      margin-bottom: 30px;
+      text-shadow: 0 0 10px #00fff7;
+    }
+    .tool {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #2a2a3d;
+      border-radius: 15px;
+      padding: 20px;
+      margin-bottom: 20px;
+      transition: 0.3s;
+    }
+    .tool:hover {
+      box-shadow: 0 0 15px #00fff7;
+    }
+    .tool a {
+      color: #a78bfa;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <h1>Top AI Chatbots for Communication and Automation</h1>
+  <h1>Top 10 AI Chatbots</h1>
 
-    <div class="tool-card">
-        <div class="tool-name">ChatGPT</div>
-        <div class="tool-desc">A versatile AI chatbot by OpenAI, perfect for conversations, writing, coding, and more.</div>
-        <a class="visit-btn" href="https://chat.openai.com/" target="_blank">Visit</a>
-    </div>
+  <div class="tool">
+    <h2>1. ChatGPT</h2>
+    <p>Versatile chatbot developed by OpenAI for conversation, research, and content generation.</p>
+    <a href="https://chat.openai.com">Visit ChatGPT</a>
+  </div>
 
-    <div class="tool-card">
-        <div class="tool-name">Gemini</div>
-        <div class="tool-desc">Google’s AI chatbot known for research-based, conversational capabilities.</div>
-        <a class="visit-btn" href="https://gemini.google.com/" target="_blank">Visit</a>
-    </div>
+  <div class="tool">
+    <h2>2. Gemini</h2>
+    <p>Google's conversational AI model offering advanced reasoning and search integration.</p>
+    <a href="https://gemini.google.com">Visit Gemini</a>
+  </div>
 
-    <div class="tool-card">
-        <div class="tool-name">Claude</div>
-        <div class="tool-desc">Anthropic's safe and helpful AI assistant for various tasks and communication.</div>
-        <a class="visit-btn" href="https://claude.ai/" target="_blank">Visit</a>
-    </div>
+  <div class="tool">
+    <h2>3. Llama3</h2>
+    <p>Meta’s open-source LLM optimized for real-time chatbot performance.</p>
+    <a href="https://ai.meta.com/llama/">Visit Llama3</a>
+  </div>
 
-    <div class="tool-card">
-        <div class="tool-name">CustomerGPT</div>
-        <div class="tool-desc">Customer service focused AI chatbot offering fast support responses.</div>
-        <a class="visit-btn" href="#" target="_blank">Visit</a>
-    </div>
-
-    <div class="tool-card">
-        <div class="tool-name">Jasper AI</div>
-        <div class="tool-desc">Advanced writing AI assistant, ideal for marketing and email replies.</div>
-        <a class="visit-btn" href="https://www.jasper.ai/" target="_blank">Visit</a>
-    </div>
-
+  <!-- ... Продължи по същия стил до 10. Lyza -->
 </body>
 </html>
