--- a/ai-chatbots.html
+++ b/ai-chatbots.html
@@ -1,62 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top AI Chatbots</title>
-  <style>
-    body {
-      background-color: #0d0b1d;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 40px;
-    }
-    h1 {
-      color: #00fff7;
-      font-size: 2.5em;
-      margin-bottom: 30px;
-      text-shadow: 0 0 10px #00fff7;
-    }
-    .tool {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid #2a2a3d;
-      border-radius: 15px;
-      padding: 20px;
-      margin-bottom: 20px;
-      transition: 0.3s;
-    }
-    .tool:hover {
-      box-shadow: 0 0 15px #00fff7;
-    }
-    .tool a {
-      color: #a78bfa;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <h1>Top 10 AI Chatbots</h1>
-
-  <div class="tool">
-    <h2>1. ChatGPT</h2>
-    <p>Versatile chatbot developed by OpenAI for conversation, research, and content generation.</p>
-    <a href="https://chat.openai.com">Visit ChatGPT</a>
+<h1 class="glow">Top 10 AI Chatbots</h1>
+<div class="tool-grid">
+  <div class="tool-card">
+    <h2>ChatGPT</h2>
+    <p>Advanced conversational AI developed by OpenAI, ideal for chatbots, content generation, and coding assistance.</p>
+    <a href="https://chat.openai.com/" target="_blank">Visit ChatGPT</a>
   </div>
-
-  <div class="tool">
-    <h2>2. Gemini</h2>
-    <p>Google's conversational AI model offering advanced reasoning and search integration.</p>
-    <a href="https://gemini.google.com">Visit Gemini</a>
+  <div class="tool-card">
+    <h2>Gemini</h2>
+    <p>Google’s powerful chatbot solution that excels in real-time responses and integration with Workspace tools.</p>
+    <a href="https://deepmind.google/technologies/gemini/" target="_blank">Visit Gemini</a>
   </div>
-
-  <div class="tool">
-    <h2>3. Llama3</h2>
-    <p>Meta’s open-source LLM optimized for real-time chatbot performance.</p>
-    <a href="https://ai.meta.com/llama/">Visit Llama3</a>
-  </div>
-
-  <!-- ... Продължи по същия стил до 10. Lyza -->
-</body>
-</html>
+  <!-- Добави още 8 в същия стил -->
+</div>
