--- a/ai-chatbots.html
+++ b/ai-chatbots.html
@@ -1,14 +1,129 @@
-<h1 class="glow">Top 10 AI Chatbots</h1>
-<div class="tool-grid">
-  <div class="tool-card">
-    <h2>ChatGPT</h2>
-    <p>Advanced conversational AI developed by OpenAI, ideal for chatbots, content generation, and coding assistance.</p>
-    <a href="https://chat.openai.com/" target="_blank">Visit ChatGPT</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top 10 AI Chatbots</title>
+  <style>
+    body {
+      background-color: #0d0b1d;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 40px;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      color: #00fff7;
+      text-shadow: 0 0 10px #00fff7;
+      margin-bottom: 30px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 25px;
+    }
+
+    .tool-card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #2a2a3d;
+      border-radius: 15px;
+      padding: 20px;
+      transition: 0.3s ease;
+    }
+
+    .tool-card:hover {
+      background: rgba(255, 255, 255, 0.1);
+      transform: translateY(-5px);
+    }
+
+    .tool-title {
+      font-size: 1.4em;
+      color: #52f2ff;
+      margin-bottom: 10px;
+    }
+
+    .tool-desc {
+      color: #ccc;
+      margin-bottom: 10px;
+    }
+
+    .tool-link {
+      color: #b47fff;
+      text-decoration: none;
+    }
+
+    .tool-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Top 10 AI Chatbots</h1>
+  <div class="grid">
+
+    <div class="tool-card">
+      <div class="tool-title">ChatGPT</div>
+      <div class="tool-desc">A versatile chatbot by OpenAI that can assist with conversations, creative writing, coding, and more.</div>
+      <a class="tool-link" href="https://chat.openai.com/" target="_blank">Visit ChatGPT</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Gemini</div>
+      <div class="tool-desc">Google’s conversational AI for research, summarizing content, and answering complex questions with context.</div>
+      <a class="tool-link" href="https://gemini.google.com/" target="_blank">Visit Gemini</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Llama 3</div>
+      <div class="tool-desc">Meta's latest AI model for natural conversation, with strong performance across multilingual dialogue.</div>
+      <a class="tool-link" href="https://ai.meta.com/llama" target="_blank">Visit LLaMA 3</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Anthropic Claude</div>
+      <div class="tool-desc">A privacy-focused chatbot built by former OpenAI engineers, excellent for reasoning and summarization.</div>
+      <a class="tool-link" href="https://claude.ai" target="_blank">Visit Claude</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">CustomGPT</div>
+      <div class="tool-desc">Create your own chatbot trained on specific documents or knowledge bases for tailored conversations.</div>
+      <a class="tool-link" href="https://customgpt.ai" target="_blank">Visit CustomGPT</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Jasper AI</div>
+      <div class="tool-desc">Primarily a content writing AI with chatbot capabilities to help generate marketing copy, ads, and emails.</div>
+      <a class="tool-link" href="https://www.jasper.ai" target="_blank">Visit Jasper</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Quickchat AI</div>
+      <div class="tool-desc">Multilingual chatbot for websites that answers product or support questions using your documentation.</div>
+      <a class="tool-link" href="https://www.quickchat.ai" target="_blank">Visit Quickchat AI</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">BookAldea</div>
+      <div class="tool-desc">AI assistant for writing, editing, and publishing books or long-form content with ease.</div>
+      <a class="tool-link" href="https://bookaldea.com" target="_blank">Visit BookAldea</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Chatbase</div>
+      <div class="tool-desc">Train a chatbot on your PDF or website and embed it for customer support or sales assistance.</div>
+      <a class="tool-link" href="https://www.chatbase.co" target="_blank">Visit Chatbase</a>
+    </div>
+
+    <div class="tool-card">
+      <div class="tool-title">Lyza</div>
+      <div class="tool-desc">A friendly AI companion designed to engage users in thoughtful conversation and emotional support.</div>
+      <a class="tool-link" href="https://lyza.ai" target="_blank">Visit Lyza</a>
+    </div>
+
   </div>
-  <div class="tool-card">
-    <h2>Gemini</h2>
-    <p>Google’s powerful chatbot solution that excels in real-time responses and integration with Workspace tools.</p>
-    <a href="https://deepmind.google/technologies/gemini/" target="_blank">Visit Gemini</a>
-  </div>
-  <!-- Добави още 8 в същия стил -->
-</div>
+</body>
+</html>
