--- a/image.html
+++ b/image.html
@@ -1,27 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Top 10 AI Image Tools</title>
-    <style>
-        body { background-color: #0f0f1a; color: #ffffff; font-family: Arial, sans-serif; padding: 2rem; }
-        h1 { color: #bb86fc; }
-        .tool { background: #1e1e2e; margin: 1rem 0; padding: 1rem; border-left: 4px solid #bb86fc; border-radius: 5px; }
-        a { color: #03dac6; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top 10 AI Image Tools</title>
+  <style>
+    body {
+      background-color: #0d0b1d;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 30px;
+      margin: 0;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #00fff7;
+      text-shadow: 0 0 10px #00fff7;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+    }
+    .tool-card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #2a2a3d;
+      border-radius: 15px;
+      padding: 20px;
+      transition: 0.3s ease-in-out;
+    }
+    .tool-card:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .tool-name {
+      font-size: 1.2em;
+      color: #69f6ff;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .tool-desc {
+      font-size: 0.95em;
+      color: #e0e0e0;
+      margin-bottom: 10px;
+    }
+    .tool-link {
+      color: #a782f9;
+      text-decoration: none;
+    }
+    .tool-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Top 10 AI Image Tools</h1>
-    <div class="tool"><strong>1. Midjourney</strong> – AI tool for stunning visuals. <a href="#">Visit</a></div>
-    <div class="tool"><strong>2. Freepik AI Image Generator</strong> – Generates creative graphics. <a href="#">Visit</a></div>
-    <div class="tool"><strong>3. Pika</strong> – Instant image editing. <a href="#">Visit</a></div>
-    <div class="tool"><strong>4. Stockimg Text Styles</strong> – Text-to-image style generator. <a href="#">Visit</a></div>
-    <div class="tool"><strong>5. Deep Dream</strong> – Neural network-based image dreamer. <a href="#">Visit</a></div>
-    <div class="tool"><strong>6. Disney Pixar AI Generator</strong> – Create Pixar-style art. <a href="#">Visit</a></div>
-    <div class="tool"><strong>7. Screenshot AI</strong> – Image AI tool for fast capture. <a href="#">Visit</a></div>
-    <div class="tool"><strong>8. Styler</strong> – AI art transformer. <a href="#">Visit</a></div>
-    <div class="tool"><strong>9. spotGPT</strong> – Product visuals from AI. <a href="#">Visit</a></div>
-    <div class="tool"><strong>10. Lucidpic</strong> – Photorealistic people generator. <a href="#">Visit</a></div>
+  <h1>Top 10 AI Image Tools</h1>
+  <div class="grid">
+    <div class="tool-card">
+      <div class="tool-name">Midjourney</div>
+      <div class="tool-desc">Generate stunning images and art from text prompts.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Midjourney</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Freepik AI</div>
+      <div class="tool-desc">Create stock images with AI for design use.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Freepik AI</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Lucidpic</div>
+      <div class="tool-desc">Generate realistic human avatars for branding.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Lucidpic</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Styler</div>
+      <div class="tool-desc">Apply artistic filters to photos with AI.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Styler</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Disney AI</div>
+      <div class="tool-desc">Transform photos into Disney-like cartoon style.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Disney AI</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Pika</div>
+      <div class="tool-desc">AI image and short clip generator.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Pika</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Screenshot AI</div>
+      <div class="tool-desc">Generate stylized screenshots or web captures.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Screenshot AI</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Stockimg.ai</div>
+      <div class="tool-desc">Generate icons, logos, posters with AI.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Stockimg.ai</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Remove.bg</div>
+      <div class="tool-desc">Remove backgrounds from images instantly.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Remove.bg</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Dream by Wombo</div>
+      <div class="tool-desc">AI art generator from mobile or desktop.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Dream by Wombo</a>
+    </div>
+  </div>
 </body>
 </html>
