--- a/video.html
+++ b/video.html
@@ -1,27 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Top 10 AI Video Tools</title>
-    <style>
-        body { background-color: #0f0f1a; color: #ffffff; font-family: Arial, sans-serif; padding: 2rem; }
-        h1 { color: #bb86fc; }
-        .tool { background: #1e1e2e; margin: 1rem 0; padding: 1rem; border-left: 4px solid #bb86fc; border-radius: 5px; }
-        a { color: #03dac6; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top 10 AI Video Tools</title>
+  <style>
+    body {
+      background-color: #0d0b1d;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 30px;
+      margin: 0;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #00fff7;
+      text-shadow: 0 0 10px #00fff7;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+    }
+    .tool-card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #2a2a3d;
+      border-radius: 15px;
+      padding: 20px;
+      transition: 0.3s ease-in-out;
+    }
+    .tool-card:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .tool-name {
+      font-size: 1.2em;
+      color: #69f6ff;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .tool-desc {
+      font-size: 0.95em;
+      color: #e0e0e0;
+      margin-bottom: 10px;
+    }
+    .tool-link {
+      color: #a782f9;
+      text-decoration: none;
+    }
+    .tool-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Top 10 AI Video Tools</h1>
-    <div class="tool"><strong>1. Runway</strong> – Real-time video editing with AI. <a href="#">Visit</a></div>
-    <div class="tool"><strong>2. CapCut</strong> – AI editing app. <a href="#">Visit</a></div>
-    <div class="tool"><strong>3. Leonardo AI</strong> – AI art and video. <a href="#">Visit</a></div>
-    <div class="tool"><strong>4. HeyGen</strong> – AI video avatar generator. <a href="#">Visit</a></div>
-    <div class="tool"><strong>5. InVideo</strong> – AI video production. <a href="#">Visit</a></div>
-    <div class="tool"><strong>6. Krisp AI</strong> – Background noise cancelation. <a href="#">Visit</a></div>
-    <div class="tool"><strong>7. YouTube Transcript AI</strong> – AI subtitle generator. <a href="#">Visit</a></div>
-    <div class="tool"><strong>8. NotionSort</strong> – AI editing tool. <a href="#">Visit</a></div>
-    <div class="tool"><strong>9. Opus Clip</strong> – AI-based video clipper. <a href="#">Visit</a></div>
-    <div class="tool"><strong>10. Venus AI</strong> – AI video model creator. <a href="#">Visit</a></div>
+  <h1>Top 10 AI Video Tools</h1>
+  <div class="grid">
+    <div class="tool-card">
+      <div class="tool-name">Runway</div>
+      <div class="tool-desc">AI-powered video editor with text-to-video tools.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Runway</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Pictory</div>
+      <div class="tool-desc">Turn text into professional videos using AI.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Pictory</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">CapCut</div>
+      <div class="tool-desc">AI editing tools with auto subtitles and filters.</div>
+      <a class="tool-link" href="#" target="_blank">Visit CapCut</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Veed.io</div>
+      <div class="tool-desc">Online video editor with AI voiceover and more.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Veed.io</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Synthesia</div>
+      <div class="tool-desc">Create videos with AI avatars and voices.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Synthesia</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Lumen5</div>
+      <div class="tool-desc">Transform blog posts into social videos.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Lumen5</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">HeyGen</div>
+      <div class="tool-desc">Realistic avatar video generation for business.</div>
+      <a class="tool-link" href="#" target="_blank">Visit HeyGen</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Descript</div>
+      <div class="tool-desc">Edit video like a document with AI transcription.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Descript</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">InVideo</div>
+      <div class="tool-desc">AI video creator with templates and media.</div>
+      <a class="tool-link" href="#" target="_blank">Visit InVideo</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Opus Clip</div>
+      <div class="tool-desc">AI tool to repurpose long videos into short clips.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Opus Clip</a>
+    </div>
+  </div>
 </body>
 </html>
