--- a/coding.html
+++ b/coding.html
@@ -1,27 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Top 10 AI Coding Tools</title>
-    <style>
-        body { background-color: #0f0f1a; color: #ffffff; font-family: Arial, sans-serif; padding: 2rem; }
-        h1 { color: #bb86fc; }
-        .tool { background: #1e1e2e; margin: 1rem 0; padding: 1rem; border-left: 4px solid #bb86fc; border-radius: 5px; }
-        a { color: #03dac6; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top 10 AI Coding Tools</title>
+  <style>
+    body {
+      background-color: #0d0b1d;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 30px;
+      margin: 0;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #00fff7;
+      text-shadow: 0 0 10px #00fff7;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+    }
+    .tool-card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #2a2a3d;
+      border-radius: 15px;
+      padding: 20px;
+      transition: 0.3s ease-in-out;
+    }
+    .tool-card:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .tool-name {
+      font-size: 1.2em;
+      color: #69f6ff;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .tool-desc {
+      font-size: 0.95em;
+      color: #e0e0e0;
+      margin-bottom: 10px;
+    }
+    .tool-link {
+      color: #a782f9;
+      text-decoration: none;
+    }
+    .tool-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Top 10 AI Coding Tools</h1>
-    <div class="tool"><strong>1. Replit</strong> – Collaborative coding with AI. <a href="#">Visit</a></div>
-    <div class="tool"><strong>2. GitHub Copilot</strong> – AI code assistant. <a href="#">Visit</a></div>
-    <div class="tool"><strong>3. Codeium</strong> – AI autocomplete for developers. <a href="#">Visit</a></div>
-    <div class="tool"><strong>4. Builder.io</strong> – Visual coding platform. <a href="#">Visit</a></div>
-    <div class="tool"><strong>5. QRX Codes</strong> – AI QR creator. <a href="#">Visit</a></div>
-    <div class="tool"><strong>6. Panda AI</strong> – Dev tools with AI support. <a href="#">Visit</a></div>
-    <div class="tool"><strong>7. AllTen</strong> – AI-powered IDE. <a href="#">Visit</a></div>
-    <div class="tool"><strong>8. Wisd</strong> – AI for bug fixing. <a href="#">Visit</a></div>
-    <div class="tool"><strong>9. Design2Code</strong> – Turn design into code. <a href="#">Visit</a></div>
-    <div class="tool"><strong>10. FlutterFlow AI Gen</strong> – AI for Flutter apps. <a href="#">Visit</a></div>
+  <h1>Top 10 AI Coding Tools</h1>
+  <div class="grid">
+    <div class="tool-card">
+      <div class="tool-name">GitHub Copilot</div>
+      <div class="tool-desc">AI code completion tool for multiple languages.</div>
+      <a class="tool-link" href="#" target="_blank">Visit GitHub Copilot</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Replit</div>
+      <div class="tool-desc">Cloud IDE with Ghostwriter AI assistant.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Replit</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Codeium</div>
+      <div class="tool-desc">Free AI code autocomplete extension.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Codeium</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Tabnine</div>
+      <div class="tool-desc">AI assistant for faster code completion.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Tabnine</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">MutableAI</div>
+      <div class="tool-desc">Clean up and refactor code with AI.</div>
+      <a class="tool-link" href="#" target="_blank">Visit MutableAI</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Polycoder</div>
+      <div class="tool-desc">Open-source AI coding model.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Polycoder</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Kite</div>
+      <div class="tool-desc">Smart autocomplete and documentation lookup.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Kite</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">AskCodi</div>
+      <div class="tool-desc">Conversational coding and generation.</div>
+      <a class="tool-link" href="#" target="_blank">Visit AskCodi</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Blackbox AI</div>
+      <div class="tool-desc">Code suggestion from any source online.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Blackbox AI</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">CodiumAI</div>
+      <div class="tool-desc">AI for writing tests and code explanations.</div>
+      <a class="tool-link" href="#" target="_blank">Visit CodiumAI</a>
+    </div>
+  </div>
 </body>
 </html>
