--- a/meetings.html
+++ b/meetings.html
@@ -1,27 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Top 10 AI Meeting Tools</title>
-    <style>
-        body { background-color: #0f0f1a; color: #ffffff; font-family: Arial, sans-serif; padding: 2rem; }
-        h1 { color: #bb86fc; }
-        .tool { background: #1e1e2e; margin: 1rem 0; padding: 1rem; border-left: 4px solid #bb86fc; border-radius: 5px; }
-        a { color: #03dac6; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Top 10 AI Meeting Tools</title>
+  <style>
+    body {
+      background-color: #0d0b1d;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 30px;
+      margin: 0;
+    }
+    h1 {
+      font-size: 2.5em;
+      color: #00fff7;
+      text-shadow: 0 0 10px #00fff7;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+    }
+    .tool-card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #2a2a3d;
+      border-radius: 15px;
+      padding: 20px;
+      transition: 0.3s ease-in-out;
+    }
+    .tool-card:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .tool-name {
+      font-size: 1.2em;
+      color: #69f6ff;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .tool-desc {
+      font-size: 0.95em;
+      color: #e0e0e0;
+      margin-bottom: 10px;
+    }
+    .tool-link {
+      color: #a782f9;
+      text-decoration: none;
+    }
+    .tool-link:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Top 10 AI Meeting Tools</h1>
-    <div class="tool"><strong>1. Sembly AI</strong> – AI meeting note-taker. <a href="#">Visit</a></div>
-    <div class="tool"><strong>2. Spinnach AI</strong> – Smart meeting tools. <a href="#">Visit</a></div>
-    <div class="tool"><strong>3. Otter.ai</strong> – AI meeting transcription. <a href="#">Visit</a></div>
-    <div class="tool"><strong>4. Meetzi</strong> – AI for online meetings. <a href="#">Visit</a></div>
-    <div class="tool"><strong>5. Notion Notes</strong> – Note automation with AI. <a href="#">Visit</a></div>
-    <div class="tool"><strong>6. Fireflies AI</strong> – Smart conversation tracking. <a href="#">Visit</a></div>
-    <div class="tool"><strong>7. PitchBob.io</strong> – AI meeting assistant. <a href="#">Visit</a></div>
-    <div class="tool"><strong>8. Circleback</strong> – Organize meetings better. <a href="#">Visit</a></div>
-    <div class="tool"><strong>9. Limoise</strong> – AI team scheduler. <a href="#">Visit</a></div>
-    <div class="tool"><strong>10. Timeoslot.ai</strong> – AI calendar manager. <a href="#">Visit</a></div>
+  <h1>Top 10 AI Meeting Tools</h1>
+  <div class="grid">
+    <div class="tool-card">
+      <div class="tool-name">Otter.ai</div>
+      <div class="tool-desc">Live transcription and meeting notes.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Otter.ai</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Fireflies</div>
+      <div class="tool-desc">AI assistant for recording and summarizing meetings.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Fireflies</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Sembly</div>
+      <div class="tool-desc">AI that joins meetings and extracts action items.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Sembly</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Fathom</div>
+      <div class="tool-desc">Free AI meeting assistant with highlight tools.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Fathom</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Grain</div>
+      <div class="tool-desc">Record and clip meeting moments easily.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Grain</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Avoma</div>
+      <div class="tool-desc">Full AI meeting assistant with CRM sync.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Avoma</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">tl;dv</div>
+      <div class="tool-desc">Time-stamped summaries of meetings with AI.</div>
+      <a class="tool-link" href="#" target="_blank">Visit tl;dv</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Read AI</div>
+      <div class="tool-desc">Real-time meeting insights and feedback.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Read AI</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Krisp</div>
+      <div class="tool-desc">AI voice enhancement and noise cancellation.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Krisp</a>
+    </div>
+    <div class="tool-card">
+      <div class="tool-name">Jamworks</div>
+      <div class="tool-desc">Student-focused AI note taker for classes.</div>
+      <a class="tool-link" href="#" target="_blank">Visit Jamworks</a>
+    </div>
+  </div>
 </body>
 </html>
